--- a/css/main.css
+++ b/css/main.css
@@ -97,37 +97,48 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: black;
   height: 100%;
+  width: 100%;
+
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
   padding: 2em;
-  font-size: 1.25em;
+  font-weight: 700;
   height: 100%;
+  color:#fff;
+
+
+
+  
 }
 
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
+
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  flex-flow: row wrap;
+  
+  
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  font-size: 1.25em;
   display:flex;
   width:30%;
   justify-content: center;
   align-items: center;
-}
+  height:auto;
 
+  
+  }
 
 
 
